<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a3aetim.app_578.Example07Activity">

    <LinearLayout
        android:id="@+id/lnL_example07"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txV_title07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txV_title07"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edT_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edT_room"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edT_lenght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edT_lenght"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edT_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edT_width"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/rdB_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdB_register"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_total"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
