<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a3aetim.app_578.Example05Activity">

    <LinearLayout
        android:id="@+id/lnL_example05"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txV_title05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txV_title05"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edT_diameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edT_diameter"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edT_lap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edT_lap"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculate()"
            android:text="@string/btn_distance"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
